--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,31 @@
       <div class="modal-footer">
       </div>
     </div>
+    
+    <div id="member" class="modal hide fade">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>{{user.login}}</h3>
+      </div>
+      <div class="modal-body">
+        <div class="row-fluid user ng-cloak">
+          <div class="span2"> 
+            <img ng-src="{{user.avatar_url}}" alt="{{user.login}}" />
+          </div>
+          <div class="info span10">
+            <ul>
+              <li ng-show="user.name"><strong>Name :</strong>{{user.name}}</li>
+              <li ng-show="user.email"><strong>Mail :</strong><a href="mailto:{{user.email}}" title="Send a email to {{user.name}}">{{user.email}}</a></li>
+              <li ng-show="user.blog"><strong>Website :</strong><a href="{{user.blog}}" title="Website of {{user.name}}">{{user.blog}}</a></li>
+              <li ng-show="user.location"><strong>Location :</strong>{{user.location}}</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+      </div>
+    </div>
+    
     <script src="lib/raphael/raphael.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="lib/raphael/pie.js"></script>
