--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,11 @@
     <title>LogiSima - Github</title>
     <meta charset="utf-8">
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" /><![endif]-->
+    <link rel="stylesheet" href="lib/leaflet/MarkerCluster.css"/>
+    <link rel="stylesheet" href="lib/leaflet/MarkerCluster.Default.css"/>
+    <!--[if lte IE 8]><link rel="stylesheet" href="lib/leaflet/MarkerCluster.Default.ie.css" /><![endif]-->
     <link href="/css/base.css" rel="stylesheet">
     <script src="lib/angular/angular.js"></script>
     <script src="js/app.js"></script>
@@ -92,9 +97,11 @@
       </div>
     </div>
     
-    <script src="lib/raphael/raphael.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="lib/raphael/pie.js"></script>
     <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
+    <script src="lib/raphael/raphael.js"></script>
+    <script src="lib/raphael/pie.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
+    <script src="lib/leaflet/leaflet.markercluster.js"></script>
   </body>
 </html>
