--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>LogiSima - Github</title>
     <meta charset="utf-8">
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.css" />
     <!--[if lte IE 8]><link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.ie.css" /><![endif]-->
     <link rel="stylesheet" href="lib/leaflet/MarkerCluster.css"/>
@@ -15,6 +15,7 @@
   	<script src="js/controllers.js"></script>
   	<script src="js/filters.js"></script>
   	<script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
   </head>
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -98,9 +99,8 @@
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
-    <script src="lib/raphael/raphael.js"></script>
-    <script src="lib/raphael/pie.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
+    <script src="http://cyberpython.github.com/AwesomeChartJS/js/awesomechart.js" ></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
     <script src="lib/leaflet/leaflet.markercluster.js"></script>
   </body>
