--- a/app/index.html
+++ b/app/index.html
@@ -100,7 +100,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/js/bootstrap.min.js"></script>
-    <script src="http://cyberpython.github.com/AwesomeChartJS/js/awesomechart.js" ></script>
+    <script src="lib/awesomechart.js" ></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.4.4/leaflet.js"></script>
     <script src="lib/leaflet/leaflet.markercluster.js"></script>
   </body>
