--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <button data-target=".nav-collapse" data-toggle="collapse" class="btn btn-navbar" type="button">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -41,7 +41,7 @@
     </div>
 
     <header class="jumbotron subhead">
-      <div class="container">
+      <div class="container-fluid">
         <form class="well form-search" ng-submit="searchRepository()">
           <div id="searchForm">
             <label class="control-label" for="search">
@@ -56,7 +56,7 @@
       </div>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
   	 <div ng-view></div>
     </div>
 
