--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
               Search a github repository
             </label>
             <div>
-                <input id="search" value="{{keyword}}">
+                <input id="search" ng-model="keyword">
                 <button type="submit" class="btn" ><i class="icon-search"></i> Search</button>
              </div>
           </div>
