--- a/app/index.html
+++ b/app/index.html
@@ -60,18 +60,8 @@
   	 <div ng-view></div>
     </div>
 
-    <div id="loading">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Loading...</h3>
-      </div>
-      <div class="modal-body">
-        <div class="progress progress-striped active">
-          <div class="bar" style="width: 100%;"></div>
-        </div>
-      </div>
-      <div class="modal-footer">
-      </div>
+    <div id="loading" class="hide">
+      <img src="img/spinner.gif" alt="Laoding" /> Please wait, page is loading.
     </div>
     
     <div id="member" class="modal hide fade">
